[gd_scene load_steps=3 format=3 uid="uid://cs3ttkrkstsha"]

[ext_resource type="Script" uid="uid://wcdypi4ekxr0" path="res://scripts/projectile_base.gd" id="1_tfj5s"]
[ext_resource type="PackedScene" uid="uid://c0bf8jxm155at" path="res://entities/AttackComponent.tscn" id="2_dbcqd"]

[node name="ProjectileBase" type="Node2D"]
script = ExtResource("1_tfj5s")

[node name="AttackComponent" parent="." instance=ExtResource("2_dbcqd")]

[node name="Area2D" type="Area2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
